--- a/view/posts/index.phtml
+++ b/view/posts/index.phtml
@@ -88,6 +88,11 @@
                     <br>
                     <h4>Visitante</h4>
                 <?php } ?>
+                <br>
+                <br>
+                <form action="/save" method="POST">
+                    <button type="submit" class="btn btn-primary">Criar post</button>
+                </form>
             </div>
         </div>
         <div class="span9">
@@ -127,8 +132,21 @@
                                 <p><?php echo $paragrafo ?></p>
                             <?php } ?>
                         </div>
+                        <form action="/comentario" method="POST">
+                            <input type="hidden" name="id" value="<?php echo $content['id'] ?>">
+                            <button type="submit" class="btn btn-primary">Comentar</button>
+                        </form>
+                        <?php foreach($this->comentario as $coment){
+                            if($coment['post'] == $content['id']){ ?>
+                                <div class="popover-title">
+                                    <div class="row">
+                                        <div style="margin-left: 30px;" class="span3"><h5><?php echo $coment['nome'] ?></h5></div>
+                                        <div class="span6 popover-title"><p><?php echo $coment['comentario'] ?></p></div>
+                                    </div>
+                                </div>
+                            <?php }
+                        } ?>
                     </div>
-
                 <?php }
             }?>
         </div>
