--- a/view/usuarios/retrieve.phtml
+++ b/view/usuarios/retrieve.phtml
@@ -101,15 +101,10 @@ echo '</div>';
         <div class="container">
             <div class="form-signin">
             <form action="" method="POST">
-                  <h3> Novo Usuário:</h3>
-                  <label>Nome: </label>
-                  <input type="text" name="nome" placeholder="Digite seu nome aqui!" />
+                  <h3> Recuperar Senha:</h3>
                   <label>E-mail: </label>
                   <input type="email" name="email" placeholder="exemplo@controlinho.com" />
-                  <label>Senha: </label>
-                  <input type="password" name="senha" /><br>
                   <input type="submit" name="salvar" value="Enviar" class="btn-success btn-large" />
-                  <input type="reset" name="salvar" value="Limpar" class="btn-normal btn-large" />
               </form>
             </div>
     </div>
