--- a/view/posts/about.phtml
+++ b/view/posts/about.phtml
@@ -47,13 +47,18 @@ if(!isset($_SESSION)){
         <div class="modal-body">
             <form action="/usuarios/retrieve" method="POST">
                 <label class="modal-label">E-mail: </label>
-                <input type="text" name="email" placeholder="Digite seu E-mail aqui!" />
+                <div class="input-prepend">
+                    <span class="add-on"><i class="icon-envelope"></i></span>
+                    <input type="text" name="email" placeholder="Digite seu E-mail aqui!" />
+                </div>
                 <label class="modal-label">Senha: </label>
-                <input type="password" name="senha" />
-                <a href="/usuarios/retrieve">Esqueceu a senha?</a><br>
+                <div class="input-prepend">
+                    <span class="add-on"><i class="icon-lock"></i></span>
+                    <input type="password" name="senha" />
+                </div>
+                <a href="/usuarios/forgot">Esqueceu a senha?</a><br>
                 <a href="/usuarios/save">Quer fazer um novo cadastro?</a><br><br>
                 <button class="btn-success" type="submit">Entrar</button>
-
             </form>
         </div>
     </div>
@@ -80,21 +85,21 @@ if(!isset($_SESSION)){
         <div class="span4 popover-title">
             <h3>Felippe Ribeiro dos Santos</h3>
             <img class="img-circle" src="images/user-avatar/santos.jpg"><br><br>
-            <p>Jovem garoto de 19 anos de idade, também conhecido como o cara do sobrenome complicado, ou pra quem tenta falar Subiski. Atualmente trabalha na empresa DimoTech soluções em software ltda. no cargo de programador web, a algo em torno de 1 ano na função. O mesmo juntamente com seus amigos teve a ideia do Controlinho a pouco tempo, e com esforço lança hoje (30/02/2015) o blog Controlinho na sua versão Alfa.</p>
+            <p class="center">Jovem garoto de 19 anos de idade, também conhecido como o cara do sobrenome complicado, ou pra quem tenta falar Subiski. Atualmente trabalha na empresa DimoTech soluções em software ltda. no cargo de programador web, a algo em torno de 1 ano na função. O mesmo juntamente com seus amigos teve a ideia do Controlinho a pouco tempo, e com esforço lança hoje (30/02/2015) o blog Controlinho na sua versão Alfa.</p>
             <br><br><br>
             <p class="center"><a target="_blank" class="btn btn-primary" href="https://www.facebook.com/felippe.omgt"><i class="icon-thumbs-up"></i> View details &raquo;</a></p>
         </div>
         <div class="span4 popover-title">
             <h3>Gabriel Avila da Silva</h3>
             <img class="img-circle" src="images/user-avatar/avila.jpg"><br><br>
-            <p>Jovem garoto de 19 anos de idade, também conhecido como o Terceiro melhor do melhor do mundo em bocha (que na verdade é bolão e não bocha), BochaMan ou bochero ou ainda simplesmente Avila. Atualmente trabalha na empresa DimoTech soluções em software ltda. no cargo de programador web, a algo em torno de 4 meses na função. O mesmo juntamente com seus amigos teve a ideia do Controlinho a pouco tempo, e com esforço lança hoje (30/02/2015) o blog Controlinho na sua versão Alfa.</p>
+            <p class="center">Jovem garoto de 19 anos de idade, também conhecido como o Terceiro melhor do melhor do mundo em bocha (que na verdade é bolão e não bocha), BochaMan ou bochero ou ainda simplesmente Avila. Atualmente trabalha na empresa DimoTech soluções em software ltda. no cargo de programador web, a algo em torno de 4 meses na função. O mesmo juntamente com seus amigos teve a ideia do Controlinho a pouco tempo, e com esforço lança hoje (30/02/2015) o blog Controlinho na sua versão Alfa.</p>
             <br>
             <p class="center"><a target="_blank" class="btn btn-primary" href="https://www.facebook.com/gabriel.avila.9849"><i class="icon-thumbs-up"></i> View details &raquo;</a></p>
         </div>
         <div class="span4 popover-title">
             <h3>Iuri Leonardo Bruski</h3>
             <img class="img-circle" src="images/user-avatar/bruski.jpg"><br><br>
-            <p>Jovem garoto de 18 anos de idade, também conhecido como o cara que não tem apelido nem nada. Atualmente trabalha na empresa CRS Centro de Residência em Software no cargo de programador web, a algo em torno de 4 meses na função. O mesmo juntamente com seus amigos teve a ideia do Controlinho a pouco tempo, e com esforço lança hoje (30/02/2015) o blog Controlinho na sua versão Alfa.</p>
+            <p class="center">Jovem garoto de 18 anos de idade, também conhecido como o cara que não tem apelido nem nada. Atualmente trabalha na empresa CRS Centro de Residência em Software no cargo de programador web, a algo em torno de 4 meses na função. O mesmo juntamente com seus amigos teve a ideia do Controlinho a pouco tempo, e com esforço lança hoje (30/02/2015) o blog Controlinho na sua versão Alfa.</p>
             <br><br><br><br>
             <p class="center"><a target="_blank" class="btn btn-primary" href="https://www.facebook.com/iurileonardo.bruski?fref=ufi"><i class="icon-thumbs-up"></i> View details &raquo;</a></p>
         </div>
