--- a/view/posts/about.phtml
+++ b/view/posts/about.phtml
@@ -83,21 +83,21 @@ if(!isset($_SESSION)){
     </div>
     <div class="row">
         <div class="span4 popover-title">
-            <h3>Felippe Ribeiro dos Santos</h3>
+            <h3><i class="icon-hand-right"></i> Felippe Ribeiro dos Santos</h3>
             <img class="img-circle" src="images/user-avatar/santos.jpg"><br><br>
             <p class="center">Jovem garoto de 19 anos de idade, também conhecido como o cara do sobrenome complicado, ou pra quem tenta falar Subiski. Atualmente trabalha na empresa DimoTech soluções em software ltda. no cargo de programador web, a algo em torno de 1 ano na função. O mesmo juntamente com seus amigos teve a ideia do Controlinho a pouco tempo, e com esforço lança hoje (30/02/2015) o blog Controlinho na sua versão Alfa.</p>
             <br><br><br>
             <p class="center"><a target="_blank" class="btn btn-primary" href="https://www.facebook.com/felippe.omgt"><i class="icon-thumbs-up"></i> View details &raquo;</a></p>
         </div>
         <div class="span4 popover-title">
-            <h3>Gabriel Avila da Silva</h3>
+            <h3><i class="icon-hand-right"></i> Gabriel Avila da Silva</h3>
             <img class="img-circle" src="images/user-avatar/avila.jpg"><br><br>
             <p class="center">Jovem garoto de 19 anos de idade, também conhecido como o Terceiro melhor do melhor do mundo em bocha (que na verdade é bolão e não bocha), BochaMan ou bochero ou ainda simplesmente Avila. Atualmente trabalha na empresa DimoTech soluções em software ltda. no cargo de programador web, a algo em torno de 4 meses na função. O mesmo juntamente com seus amigos teve a ideia do Controlinho a pouco tempo, e com esforço lança hoje (30/02/2015) o blog Controlinho na sua versão Alfa.</p>
             <br>
             <p class="center"><a target="_blank" class="btn btn-primary" href="https://www.facebook.com/gabriel.avila.9849"><i class="icon-thumbs-up"></i> View details &raquo;</a></p>
         </div>
         <div class="span4 popover-title">
-            <h3>Iuri Leonardo Bruski</h3>
+            <h3><i class="icon-hand-right"></i> Iuri Leonardo Bruski</h3>
             <img class="img-circle" src="images/user-avatar/bruski.jpg"><br><br>
             <p class="center">Jovem garoto de 18 anos de idade, também conhecido como o cara que não tem apelido nem nada. Atualmente trabalha na empresa CRS Centro de Residência em Software no cargo de programador web, a algo em torno de 4 meses na função. O mesmo juntamente com seus amigos teve a ideia do Controlinho a pouco tempo, e com esforço lança hoje (30/02/2015) o blog Controlinho na sua versão Alfa.</p>
             <br><br><br><br>
